--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
   ],
   "require": {
     "php": "^5.6 || ^7.0",
-    "psr/http-message": "^1.0",
-    "container-interop/container-interop": "^1.1"
+    "psr/http-message": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8",
