--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.2-dev"
+      "dev-master": "0.1-dev",
+      "dev-develop": "0.2-dev"
     }
   }
 }
