--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^7.1",
+    "php": "^7.4 || ~8.0.0 || ~8.1.0",
     "psr/http-message": "^1.0"
   },
   "require-dev": {
