--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.4 || ~8.0.0 || ~8.1.0",
         "psr/http-message": "^1.0",
-        "laminas/laminas-dependency-plugin": "^1.0"
+        "laminas/laminas-dependency-plugin": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
@@ -32,6 +32,11 @@
         "branch-alias": {
             "dev-master": "2.0-dev",
             "dev-develop": "2.1-dev"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "laminas/laminas-dependency-plugin": true
         }
     }
 }
