--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "php": "^7.4 || ~8.0.0 || ~8.1.0",
-        "psr/http-message": "^1.0",
-        "laminas/laminas-dependency-plugin": "^2.2"
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
