--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "php": "~8.1.0 || ~8.2.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "squizlabs/php_codesniffer": "^2.3"
+        "phpunit/phpunit": "^10.2",
+        "laminas/laminas-coding-standard": "^2.5",
+        "squizlabs/php_codesniffer": "3.7.*",
+        "vimeo/psalm": "^5.13"
     },
     "autoload": {
         "psr-4": {
@@ -24,7 +26,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "DotTest\\Authentication\\": "test/"
+            "DotTest\\Authentication\\": "tests/"
         }
     },
     "extra": {
@@ -35,7 +37,19 @@
     },
     "config": {
         "allow-plugins": {
-            "laminas/laminas-dependency-plugin": true
+            "laminas/laminas-dependency-plugin": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "scripts": {
+        "check": [
+            "@cs-check",
+            "@test"
+        ],
+        "cs-check": "phpcs",
+        "cs-fix": "phpcbf",
+        "test": "phpunit --colors=always",
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+        "static-analysis": "psalm --shepherd --stats"
     }
 }
