--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
     "require-dev": {
         "phpunit/phpunit": "^10.2",
         "laminas/laminas-coding-standard": "^2.5",
-        "squizlabs/php_codesniffer": "3.7.*",
         "vimeo/psalm": "^5.13"
     },
     "autoload": {
@@ -29,18 +28,13 @@
             "DotTest\\Authentication\\": "tests/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.0-dev",
-            "dev-develop": "2.1-dev"
-        }
-    },
     "config": {
         "allow-plugins": {
             "laminas/laminas-dependency-plugin": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
+    "sort-packages": true,
     "scripts": {
         "check": [
             "@cs-check",
