--- a/composer.json
+++ b/composer.json
@@ -25,16 +25,16 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "DotTest\\Authentication\\": "tests/"
+            "DotTest\\Authentication\\": "test/"
         }
     },
     "config": {
+        "sort-packages": true,
         "allow-plugins": {
-            "laminas/laminas-dependency-plugin": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
-    "sort-packages": true,
+
     "scripts": {
         "check": [
             "@cs-check",
